# Meta-Skill

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/meta-skill/meta_skill/: cli.py
.codex-plugin/: plugin.json
meta_skill/: __init__.py  cache.py  cli.py  scanner.py
scripts/: install.sh  ms  uninstall.sh
skills/meta-skill/: SKILL.md
skills/meta-skill/meta_skill/: cache.py  cli.py  report.py  translator.py
skills/meta-skill/scripts/: ms
