[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-skill"
version = "0.2.0"
description = "AI Coding Assistant Skills Discovery & Analysis Tool / AI 编程助手技能发现与分析工具"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "jiangjie714" }
]
keywords = ["ai", "claude-code", "codex", "skills", "agent", "localization", "chinese"]

[project.scripts]
meta-skill = "meta_skill.cli:main"

[tool.setuptools.packages.find]
include = ["meta_skill*"]
